LB-6356 forgot my password e-mail popup and api implement

--- a/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,6 +17,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="captchaView" destination="BRt-og-nfn" id="ant-Eq-wTX"/>
+                <outlet property="infoImageView" destination="i1p-r9-eLv" id="f3R-9g-sfc"/>
                 <outlet property="infoTitle" destination="KTs-IA-6N1" id="Y95-3X-12K"/>
                 <outlet property="loginEnterView" destination="quc-Rg-Lkk" id="5VI-TK-pd3"/>
                 <outlet property="scrollView" destination="UVa-ce-PgV" id="DrD-Cy-Jk6"/>
@@ -30,13 +31,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UVa-ce-PgV">
-                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jzz-bl-nJl">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="68" translatesAutoresizingMaskIntoConstraints="NO" id="Uj0-i2-5yg">
-                                    <rect key="frame" x="20" y="20" width="335" height="17.5"/>
+                                    <rect key="frame" x="20" y="100" width="335" height="17.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTs-IA-6N1">
                                             <rect key="frame" x="0.0" y="0.0" width="335" height="17.5"/>
@@ -47,18 +48,18 @@
                                     </subviews>
                                 </stackView>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="quc-Rg-Lkk" userLabel="email" customClass="ProfileTextEnterView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="61.5" width="335" height="80"/>
+                                    <rect key="frame" x="20" y="141.5" width="335" height="80"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="156.5" width="335" height="177"/>
+                                    <rect key="frame" x="20" y="236.5" width="335" height="177"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="177" id="FVc-9n-JUc"/>
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="28" y="373.5" width="319" height="45"/>
+                                    <rect key="frame" x="28" y="453.5" width="319" height="45"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="45" id="LD9-OQ-ca2"/>
                                     </constraints>
@@ -67,6 +68,13 @@
                                         <action selector="onSendPasswordButton" destination="-1" eventType="touchUpInside" id="Mx6-1j-D01"/>
                                     </connections>
                                 </button>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i1p-r9-eLv">
+                                    <rect key="frame" x="157.5" y="20" width="60" height="60"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="60" id="OaT-DF-1Kc"/>
+                                        <constraint firstAttribute="height" constant="60" id="QKD-P0-0A5"/>
+                                    </constraints>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
@@ -77,10 +85,12 @@
                                 <constraint firstAttribute="trailing" secondItem="BRt-og-nfn" secondAttribute="trailing" constant="20" id="Pym-d0-WX9"/>
                                 <constraint firstItem="aQN-30-H9G" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="28" id="QgV-JD-YtB"/>
                                 <constraint firstItem="quc-Rg-Lkk" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="SUP-MS-zIv"/>
+                                <constraint firstItem="i1p-r9-eLv" firstAttribute="top" secondItem="jzz-bl-nJl" secondAttribute="top" constant="20" id="T4g-9p-uRH"/>
+                                <constraint firstItem="i1p-r9-eLv" firstAttribute="centerX" secondItem="jzz-bl-nJl" secondAttribute="centerX" id="Yuk-fE-lFq"/>
+                                <constraint firstItem="Uj0-i2-5yg" firstAttribute="top" secondItem="i1p-r9-eLv" secondAttribute="bottom" constant="20" id="aig-TO-PWM"/>
                                 <constraint firstItem="Uj0-i2-5yg" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="gSo-ET-MiL"/>
                                 <constraint firstAttribute="trailing" secondItem="quc-Rg-Lkk" secondAttribute="trailing" constant="20" id="kmb-3u-ADR"/>
                                 <constraint firstItem="Uj0-i2-5yg" firstAttribute="centerX" secondItem="jzz-bl-nJl" secondAttribute="centerX" id="wjP-Wx-fCL"/>
-                                <constraint firstItem="Uj0-i2-5yg" firstAttribute="top" secondItem="jzz-bl-nJl" secondAttribute="top" constant="20" id="xjr-qJ-OSc"/>
                                 <constraint firstAttribute="trailing" secondItem="aQN-30-H9G" secondAttribute="trailing" constant="28" id="yMm-qQ-oEu"/>
                             </constraints>
                         </view>
@@ -104,7 +114,7 @@
                 <constraint firstItem="UVa-ce-PgV" firstAttribute="leading" secondItem="tLh-dZ-YLw" secondAttribute="leading" id="jOz-FL-aeT"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-            <point key="canvasLocation" x="49" y="-193"/>
+            <point key="canvasLocation" x="48.799999999999997" y="-193.85307346326837"/>
         </view>
     </objects>
     <resources>
