--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DiscoverCard/DiscoverCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DiscoverCard/DiscoverCard.xib
@@ -5,9 +5,16 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GT-America-LC-Standard-Black.ttf">
+            <string>GTAmericaLC-Bl</string>
+        </array>
+        <array key="GT-America-LC-Standard-Medium.ttf">
+            <string>GTAmericaLC-Md</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,51 +28,50 @@
                         <constraint firstAttribute="height" constant="24" id="Zqi-EH-iYw"/>
                         <constraint firstAttribute="width" constant="24" id="bQb-as-lMe"/>
                     </constraints>
-                    <state key="normal" image="iconCancelUnborder"/>
+                    <state key="normal" image="iconCancelUnborderV2"/>
                     <connections>
-                        <action selector="onCancelButton" destination="Aqf-iW-s0r" eventType="touchUpInside" id="JXl-tU-Iv6"/>
+                        <action selector="deleteCardAction:" destination="Aqf-iW-s0r" eventType="touchUpInside" id="HoN-B9-fRV"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Scene Selection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q50-zj-Sfq">
-                    <rect key="frame" x="16" y="29" width="153.66666666666666" height="24"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="24" id="DMx-UR-ku2"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <nil key="textColor"/>
+                    <rect key="frame" x="16" y="29" width="155.33333333333334" height="20.333333333333329"/>
+                    <fontDescription key="fontDescription" name="GTAmericaLC-Md" family="GT America LC" pointSize="16"/>
+                    <color key="textColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zgG-Ex-9eQ">
-                    <rect key="frame" x="0.0" y="78" width="359" height="1"/>
+                    <rect key="frame" x="0.0" y="74.333333333333329" width="359" height="1"/>
                     <color key="backgroundColor" red="0.49803921569999998" green="0.73725490199999999" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Ryx-GN-B3f"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seri fotoğraflarının arasında en iyi fotoğrafını belirle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQi-0t-pSC">
-                    <rect key="frame" x="16" y="95" width="327" height="33.666666666666657"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <nil key="textColor"/>
+                    <rect key="frame" x="16" y="91.333333333333329" width="327" height="35.333333333333329"/>
+                    <fontDescription key="fontDescription" name="GTAmericaLC-Bl" family="GT America LC" pointSize="14"/>
+                    <color key="textColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="awZ-iK-HFW">
-                    <rect key="frame" x="0.0" y="137" width="359" height="137"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6TR-1b-Z2v">
-                        <size key="itemSize" width="128" height="128"/>
+                    <rect key="frame" x="0.0" y="135" width="359" height="162"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6TR-1b-Z2v">
+                        <size key="itemSize" width="128" height="160"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMp-8L-cCl">
-                    <rect key="frame" x="16" y="301" width="215" height="26"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="26" id="Wv4-x2-RhY"/>
-                    </constraints>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMp-8L-cCl">
+                    <rect key="frame" x="16" y="305" width="191" height="34.333333333333314"/>
                     <color key="tintColor" red="0.0" green="0.4823529411764706" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Tüm Seri Fotoğrafları Gör"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Tüm Seri Fotoğrafları Gör">
+                        <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="showAllPicture:" destination="Aqf-iW-s0r" eventType="touchUpInside" id="NiV-Ue-RPc"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="4eL-ld-hXs"/>
@@ -77,29 +83,31 @@
                 <constraint firstItem="zgG-Ex-9eQ" firstAttribute="top" secondItem="q50-zj-Sfq" secondAttribute="bottom" constant="25" id="4rG-iN-Peq"/>
                 <constraint firstItem="q50-zj-Sfq" firstAttribute="top" secondItem="Aqf-iW-s0r" secondAttribute="top" constant="29" id="5i8-Al-vmn"/>
                 <constraint firstItem="4eL-ld-hXs" firstAttribute="trailing" secondItem="vQi-0t-pSC" secondAttribute="trailing" constant="16" id="G28-qL-uwt"/>
+                <constraint firstItem="awZ-iK-HFW" firstAttribute="height" secondItem="Aqf-iW-s0r" secondAttribute="height" multiplier="0.384181" constant="25.999925999999988" id="G8G-8e-yB3"/>
                 <constraint firstItem="q50-zj-Sfq" firstAttribute="leading" secondItem="Aqf-iW-s0r" secondAttribute="leading" constant="16" id="Jig-9X-wpM"/>
+                <constraint firstItem="eMp-8L-cCl" firstAttribute="height" secondItem="Aqf-iW-s0r" secondAttribute="height" multiplier="0.0969868" id="Lkt-q5-Mfz"/>
                 <constraint firstItem="awZ-iK-HFW" firstAttribute="top" secondItem="vQi-0t-pSC" secondAttribute="bottom" constant="8.3333333333333428" id="Q3G-Ae-T9T"/>
                 <constraint firstItem="vQi-0t-pSC" firstAttribute="leading" secondItem="4eL-ld-hXs" secondAttribute="leading" constant="16" id="QVa-WT-pYG"/>
                 <constraint firstItem="qvY-He-XIf" firstAttribute="top" secondItem="Aqf-iW-s0r" secondAttribute="top" constant="20" id="d9f-VQ-x8u"/>
                 <constraint firstItem="awZ-iK-HFW" firstAttribute="leading" secondItem="4eL-ld-hXs" secondAttribute="leading" id="fQv-L5-YTQ"/>
                 <constraint firstAttribute="trailing" secondItem="zgG-Ex-9eQ" secondAttribute="trailing" id="jIJ-X6-mzZ"/>
-                <constraint firstItem="eMp-8L-cCl" firstAttribute="top" secondItem="awZ-iK-HFW" secondAttribute="bottom" constant="27" id="kxW-Sx-oqq"/>
-                <constraint firstItem="eMp-8L-cCl" firstAttribute="bottom" secondItem="4eL-ld-hXs" secondAttribute="bottom" constant="7" id="nhB-hO-mWf"/>
+                <constraint firstItem="eMp-8L-cCl" firstAttribute="top" secondItem="awZ-iK-HFW" secondAttribute="bottom" constant="8" id="kxW-Sx-oqq"/>
+                <constraint firstItem="q50-zj-Sfq" firstAttribute="height" secondItem="Aqf-iW-s0r" secondAttribute="height" multiplier="0.0574388" id="qm3-tS-1fo"/>
                 <constraint firstItem="4eL-ld-hXs" firstAttribute="trailing" secondItem="awZ-iK-HFW" secondAttribute="trailing" id="s22-sr-sSc"/>
                 <constraint firstItem="vQi-0t-pSC" firstAttribute="top" secondItem="zgG-Ex-9eQ" secondAttribute="bottom" constant="16" id="vK7-kd-3Ss"/>
+                <constraint firstItem="vQi-0t-pSC" firstAttribute="height" secondItem="Aqf-iW-s0r" secondAttribute="height" multiplier="0.0998117" id="wWI-73-aWR"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="cancelButton" destination="qvY-He-XIf" id="wJx-CQ-ihi"/>
-                <outlet property="closeButton" destination="qvY-He-XIf" id="Krj-OI-UGb"/>
+                <outlet property="collectionView" destination="awZ-iK-HFW" id="O3J-x2-LXY"/>
+                <outlet property="descriptionLabel" destination="vQi-0t-pSC" id="XbV-m2-xK1"/>
+                <outlet property="showAllPictureLabel" destination="eMp-8L-cCl" id="tiu-aO-CVE"/>
+                <outlet property="titleLabel" destination="q50-zj-Sfq" id="W2i-2j-kHH"/>
             </connections>
-            <point key="canvasLocation" x="-132.06106870229007" y="-90.140845070422543"/>
+            <point key="canvasLocation" x="-208.3969465648855" y="-99.295774647887328"/>
         </view>
     </objects>
     <resources>
-        <image name="iconCancelUnborder" width="24" height="24"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="iconCancelUnborderV2" width="24" height="24"/>
     </resources>
 </document>
