--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DiscoverCard/DiscoverCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DiscoverCard/DiscoverCard.xib
@@ -33,8 +33,8 @@
                         <action selector="deleteCardAction:" destination="Aqf-iW-s0r" eventType="touchUpInside" id="HoN-B9-fRV"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Scene Selection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q50-zj-Sfq">
-                    <rect key="frame" x="16" y="29" width="155.33333333333334" height="20.333333333333329"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seri Fotoğraflar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q50-zj-Sfq">
+                    <rect key="frame" x="16.000000000000007" y="29" width="113.66666666666669" height="20.333333333333329"/>
                     <fontDescription key="fontDescription" name="GTAmericaLC-Md" family="GT America LC" pointSize="16"/>
                     <color key="textColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                         <constraint firstAttribute="height" constant="1" id="Ryx-GN-B3f"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seri fotoğraflarının arasında en iyi fotoğrafını belirle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQi-0t-pSC">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seri fotoğraflarından en iyisini seç!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQi-0t-pSC">
                     <rect key="frame" x="16" y="91.333333333333329" width="327" height="35.333333333333329"/>
                     <fontDescription key="fontDescription" name="GTAmericaLC-Bl" family="GT America LC" pointSize="14"/>
                     <color key="textColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
@@ -63,10 +63,10 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMp-8L-cCl">
-                    <rect key="frame" x="16" y="305" width="191" height="34.333333333333314"/>
+                    <rect key="frame" x="16" y="305" width="94" height="34.333333333333314"/>
                     <color key="tintColor" red="0.0" green="0.4823529411764706" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Tüm Seri Fotoğrafları Gör">
+                    <buttonConfiguration key="configuration" style="plain" title="Tümünü Gör">
                         <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                     </buttonConfiguration>
                     <connections>
