--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DiscoverCard/DiscoverCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/DiscoverCard/DiscoverCard.xib
@@ -11,8 +11,8 @@
         <array key="GT-America-LC-Standard-Black.ttf">
             <string>GTAmericaLC-Bl</string>
         </array>
-        <array key="GT-America-LC-Standard-Medium.ttf">
-            <string>GTAmericaLC-Md</string>
+        <array key="GT-America-LC-Standard-Bold.ttf">
+            <string>GTAmericaLC-Bd</string>
         </array>
     </customFonts>
     <objects>
@@ -34,8 +34,8 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seri Fotoğraflar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q50-zj-Sfq">
-                    <rect key="frame" x="16.000000000000007" y="29" width="113.66666666666669" height="20.333333333333329"/>
-                    <fontDescription key="fontDescription" name="GTAmericaLC-Md" family="GT America LC" pointSize="16"/>
+                    <rect key="frame" x="16.000000000000007" y="29" width="124.66666666666669" height="20.333333333333329"/>
+                    <fontDescription key="fontDescription" name="GTAmericaLC-Bl" family="GT America LC" pointSize="16"/>
                     <color key="textColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -63,12 +63,11 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMp-8L-cCl">
-                    <rect key="frame" x="16" y="305" width="94" height="34.333333333333314"/>
+                    <rect key="frame" x="16" y="305" width="81" height="34.333333333333314"/>
+                    <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="14"/>
                     <color key="tintColor" red="0.0" green="0.4823529411764706" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Tümünü Gör">
-                        <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
-                    </buttonConfiguration>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="Tümünü Gör"/>
                     <connections>
                         <action selector="showAllPicture:" destination="Aqf-iW-s0r" eventType="touchUpInside" id="NiV-Ue-RPc"/>
                     </connections>
