fixed title label height and changed logo

--- a/Depo/Depo/Presentation/SubViews/PhotoPrint/View/Popups/PhotoPrintVideoPopUp.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoPrint/View/Popups/PhotoPrintVideoPopUp.xib
@@ -37,11 +37,8 @@
                         <constraint firstAttribute="width" constant="66" id="yOU-t3-ES0"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDP-sm-L2A">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDP-sm-L2A">
                     <rect key="frame" x="20" y="114" width="492" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="ivf-yA-gMc"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
